# astro-stomp

./: INSTALL  Makefile  Makefile.am  ProjectHome.md  README  configure.ac  stomp-1.0.pc.in  stomp.i  stomp_angular_bin.h  stomp_angular_coordinate.cc  stomp_angular_coordinate.h  stomp_angular_coordinate_test.cc  stomp_angular_coordinate_test.h  stomp_angular_correlation_test.cc  stomp_core.cc  stomp_core.h  stomp_core_test.cc  stomp_footprint.h  stomp_footprint_test.cc  stomp_geometry.cc  stomp_map.cc  stomp_map.h  stomp_map_test.cc  stomp_pixel.cc  stomp_pixel.h  stomp_pixel_test.cc  stomp_pixel_test.h  stomp_scalar_map.cc  stomp_scalar_map.h  stomp_scalar_map_test.cc  stomp_scalar_map_test.h  stomp_scalar_pixel.cc  stomp_scalar_pixel.h  stomp_scalar_pixel_test.cc  stomp_tree_map.cc  stomp_tree_map.h  stomp_tree_map_test.cc  stomp_tree_pixel.cc  stomp_tree_pixel.h  stomp_tree_pixel_test.cc  (+5 more)
examples/: stomp_adapt_map.cc  stomp_circle_coverage.cc  stomp_galaxy_autocorrelation.cc  stomp_galaxy_autocorrelation_jack.cc  stomp_galaxy_radial_autocorrelation_jack.cc  stomp_local_density.cc  stomp_pixelize_circles.cc  stomp_projected_density.cc  stomp_stripe_filter.cc  stomp_sys_xcorr.cc  stomp_sysmap_filter.cc  stomp_sysmap_generator.cc
python/: NumpyVector.h  generators.i  setup.py  stomp.i  stomp.py  stomp_wrap.cxx
s2/: Makefile.am  Makefile.in  README  s2.cc  s2cellid.cc  s2cellid.h  s2loop.cc  s2polygon.cc  s2polygonbuilder.h  s2testing.cc
s2/base/: port.h  string_printf.cc
s2/strings/: ascii_ctype.h  stringprintf.h  strutil.h
s2omp/: Makefile.am  angular_bin-inl.h  angular_bin_test.cc  angular_correlation.h  annulus_bound.cc  annulus_bound.h  base_bound.h  bound_interface.cc  bound_interface.h  circle_bound.cc  circle_bound.h  circle_bound_test.cc  core.h  cosmo_point-inl.h  coverer.cc  coverer.h  geometric_bound_interface.h  indexed_point-inl.h  io.h  latlon_bound.cc  pixel.cc  pixel.h  pixel_test.cc  pixel_union.cc  pixel_union.h  pixel_union_test.cc  pixelized_bound.h  pixelized_bound_interface.h  point.cc  point.h  polygon_bound.cc  polygon_bound_test.cc  region_map.cc  region_map.h  region_map_test.cc  s2omp.h  s2omp.pb.cc  s2omp.pb.h  s2omp.proto  s2omp_test.cc  (+9 more)
stomp/: Makefile.am  stomp.h  stomp_angular_bin.cc  stomp_angular_bin.h  stomp_angular_coordinate.cc  stomp_angular_coordinate.h  stomp_angular_coordinate_test.cc  stomp_angular_correlation.cc  stomp_angular_correlation.h  stomp_base_map.cc  stomp_base_map.h  stomp_core.cc  stomp_geometry.cc  stomp_geometry.h  stomp_geometry_test.cc  stomp_itree_map.cc  stomp_itree_pixel.cc  stomp_itree_pixel.h  stomp_itree_pixel_test.cc  stomp_map.cc  stomp_map.h  stomp_map_test.cc  stomp_pixel.cc  stomp_pixel.h  stomp_radial_bin.cc  stomp_radial_correlation.cc  stomp_radial_correlation.h  stomp_scalar_map.cc  stomp_scalar_map.h  stomp_scalar_map_test.cc  stomp_scalar_pixel_test.cc  stomp_tree_map.cc  stomp_tree_map.h  stomp_tree_map_test.cc  stomp_tree_pixel.cc  stomp_tree_pixel.h  stomp_tree_pixel_test.cc  stomp_unit_test.cc  stomp_util.cc  stomp_util.h  (+1 more)
stomp_viewer/: reader_thread.h  render_area.cc  render_area.h  render_geometry.cc  render_geometry.h  render_thread.h  stomp_viewer.cc  stomp_viewer.h  stomp_viewer.pro
trunk/: Makefile  Makefile.am  configure.ac  stomp.h  stomp.i  stomp_angular_bin.cc  stomp_angular_bin_test.cc  stomp_angular_coordinate.cc  stomp_angular_coordinate.h  stomp_angular_coordinate_test.cc  stomp_angular_correlation.cc  stomp_angular_correlation.h  stomp_angular_correlation_test.cc  stomp_angular_correlation_test.h  stomp_base_map.cc  stomp_base_map.h  stomp_core_test.cc  stomp_core_test.h  stomp_footprint.cc  stomp_footprint.h  stomp_footprint_test.cc  stomp_footprint_test.h  stomp_geometry_test.cc  stomp_map.cc  stomp_map.h  stomp_map_test.cc  stomp_map_test.h  stomp_pixel.cc  stomp_pixel.h  stomp_pixel_test.cc  stomp_pixel_test.h  stomp_scalar_map.h  stomp_scalar_map_test.cc  stomp_scalar_pixel.h  stomp_scalar_pixel_test.cc  stomp_scalar_pixel_test.h  (+9 more)
trunk/examples/: Makefile.am  stomp_adapt_map.cc  stomp_circle_coverage.cc  stomp_combine_maps.cc  stomp_galaxy_autocorrelation.cc  stomp_galaxy_autocorrelation_jack.cc  stomp_galaxy_radial_autocorrelation_jack.cc  stomp_local_density.cc  stomp_pixelize_circles.cc  stomp_projected_density.cc  stomp_stripe_filter.cc  stomp_sys_xcorr.cc  stomp_sysmap_density.cc  stomp_sysmap_filter.cc  stomp_sysmap_generator.cc
trunk/s2/: Makefile  Makefile.am  s2.h  s2cellid.cc  s2cellid.h  s2polygonbuilder.cc  s2regioncoverer.cc
trunk/s2/strings/: ascii_ctype.cc  split.h  strutil.cc  strutil.h
trunk/s2omp/: Makefile.am  angular_bin-inl.h  angular_bin_test.cc  angular_correlation.h  annulus_bound.cc  annulus_bound.h  annulus_bound_test.cc  bound_interface.cc  bound_interface.h  circle_bound.cc  circle_bound.h  circle_bound_test.cc  core.h  cosmo_point-inl.h  coverer.cc  coverer.h  coverer_test.cc  field_pixel-inl.h  field_union.cc  field_union.h  geometric_bound.h  io.cc  io_test.cc  latlon_bound.h  pixel.cc  pixel.h  pixel_test.cc  pixel_union.cc  pixel_union.h  pixel_union_test.cc  point.cc  point.h  point_test.cc  polygon_bound.h  region_map.cc  region_map.h  s2omp.proto  s2omp_test.cc  scalar_pixel.h  scalar_union.cc  (+7 more)
trunk/stomp/: Makefile.am  stomp_angular_bin.cc  stomp_angular_bin.h  stomp_angular_coordinate.cc  stomp_angular_coordinate.h  stomp_angular_coordinate_test.cc  stomp_angular_correlation.cc  stomp_angular_correlation.h  stomp_base_map.cc  stomp_base_map.h  stomp_core.cc  stomp_core.h  stomp_geometry.cc  stomp_geometry.h  stomp_geometry_test.cc  stomp_itree_map.cc  stomp_itree_map.h  stomp_itree_map_test.cc  stomp_itree_pixel.cc  stomp_map.cc  stomp_map.h  stomp_map_test.cc  stomp_pixel.cc  stomp_pixel.h  stomp_radial_bin.h  stomp_radial_correlation.cc  stomp_radial_correlation.h  stomp_scalar_map.cc  stomp_scalar_map.h  stomp_scalar_map_test.cc  stomp_scalar_pixel.cc  stomp_scalar_pixel.h  stomp_tree_map.cc  stomp_tree_map.h  stomp_tree_map_test.cc  stomp_tree_pixel.cc  stomp_tree_pixel.h  stomp_tree_pixel_test.cc  stomp_util.cc
(+91 files in other folders)
